--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,16 +23,8 @@ jobs:
         with:
           path: 'ansible-hello-world'
 
-      - name: Set up Python 3.
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-
-      - name: Install test dependencies.
-        run: pip3 install ansible molecule[docker]
-
       - name: Run Molecule tests.
-        run: molecule test
+        run: make
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
