run yamllint and ansible-lint on 'molecule test'

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -5,6 +5,11 @@ dependency:
 driver:
   name: docker
 
+lint: |
+  set -e
+  yamllint .
+  ansible-lint
+
 platforms:
   - name: instance
     image: "geerlingguy/docker-${MOLECULE_DISTRO:-ubuntu1804}-ansible:latest"
