Revert "experiment to remove runs-on from GH Action"
This reverts commit ebf0ac82afa87fa9db9f4d5d204f5b114e70e955.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,11 @@ jobs:
 
   molecule:
     name: Molecule
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        distro:
+          - ubuntu1804
 
     steps:
       - name: Check out the codebase.
