attempt to run test.sh as GH Action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
           path: 'ansible-hello-world'
 
       - name: Run Molecule tests.
-        run: make
+        run: ci/tasks/test.sh
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
