--- a/ci/tasks/test.yml
+++ b/ci/tasks/test.yml
@@ -4,10 +4,11 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: amidos/dcind
+    repository: clapclapexcitement/dcind-ansible-molecule
 
 inputs:
   - name: ansible-hello-world
 
 run:
-  path: ansible-hello-world/ci/tasks/test.sh
+  dir: ansible-hello-world
+  path: ci/tasks/test.sh
