set up Python in GH Action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,11 @@ jobs:
         with:
           path: 'ansible-hello-world'
 
+      - name: Set up Python 3.
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+
       - name: Install test dependencies.
         run: pip3 install ansible ansible-lint yamllint molecule[docker]
 
